RF Merge Dashboard1Test into DashboardTest (#1388)